--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <div class="container">
     <h1>Privacy Policy — Japanese Anki Flashcards</h1>
-    <p class="meta">Last Updated: <strong>[Insert date here] / [Bạn điền ngày]</strong></p>
+    <p class="meta">Last Updated: <strong>[2025/11/27]</strong></p>
 
     <!-- Language Toggle -->
     <div class="lang-toggle">
