--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <!-- Footer -->
         <footer class="mt-12 pt-6 border-t text-center text-gray-500 text-sm">
-            &copy; 2025 Japanese Anki Flashcards. All rights reserved.
+            &copy; © 2025 AnkiJLPT by TUAN. All rights reserved.
         </footer>
     </div>
 
